# pqdevnet-notebooks

./: .gitignore  AGENTS.md  README.md  justfile  lean-pipeline.yaml  package.json  pipeline.yaml  pnpm-lock.yaml  pqdevnet-pipeline.yaml  pyproject.toml
.github/workflows/: lean-sync.yml  pages.yml  sync.yml
notebooks/: 01-blob-inclusion.ipynb  01-blob-inclusion.qmd  02-blob-flow.ipynb  03-column-propagation.ipynb  04-mempool-visibility.ipynb  05-mev-pipeline.ipynb  06-block-column-timing.ipynb  07-propagation-anomalies.ipynb  08-missed-slots.ipynb  09-block-propagation-size.ipynb  loaders.py  plotly_theme.py
notebooks/pqdevnet/: 01-pq-signature-performance.ipynb  02-resource-utilization.ipynb  03-consensus.ipynb  05-state-transitions.ipynb
notebooks/templates/minimal/: index.html.j2
peerdas/: 01-blob-inclusion.ipynb  02-blob-flow.ipynb  03-column-propagation.ipynb  README.md  lib.py  pyproject.toml
peerdas/data/: blob_popularity.parquet  blobs_per_slot.parquet  blocks_blob_epoch.parquet  col_first_seen.parquet  proposer_blobs.parquet  slot_in_epoch.parquet
queries/: block_production_timeline.py  block_propagation_by_size.py  block_propagation_contributoor.py
scripts/: copy_data_to_dist.py  fetch_data.py  pipeline.py  render_notebooks.py  upload_r2.py
scripts/lean/: detect_devnets.py  fetch_data_prometheus.py  render_notebooks.py
site/: .prettierrc  astro.config.mjs  components.json  package.json  pnpm-lock.yaml
site/src/components/: CodeToggle.astro  CodeToggle.tsx  (+8 more)
worker/: package.json  pnpm-lock.yaml  wrangler.toml
worker/src/: index.ts
(+27 files in other folders)
